Full extraction completed for one scenario